[project]
name = "crypto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "python-dotenv>=1.2.1",
    "python-socks>=2.8.1",
    "websockets>=16.0",
    "ib_async",
]

[tool.setuptools]
package-dir = {"" = "src"}

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.7",
    "ty>=0.0.24",
]
